# simple-collision-detection

./: .gitignore  CMakeLists.txt  README.md
lib/: dummy.txt
lib/OIS/include/: OISEffect.h  OISEvents.h  OISException.h  OISFactoryCreator.h  OISForceFeedback.h  OISInputManager.h  OISInterface.h  OISJoyStick.h  OISKeyboard.h  OISMouse.h  OISMultiTouch.h  OISObject.h  OISPrereqs.h.in
lib/OIS/include/SDL/: SDLInputManager.h  SDLKeyboard.h  SDLMouse.h  SDLPrereqs.h
lib/OIS/include/iphone/: iPhoneAccelerometer.h  iPhoneHelpers.h  iPhoneInputManager.h  iPhoneMultiTouch.h  iPhonePrereqs.h
lib/OIS/include/linux/: LinuxKeyboard.h  LinuxMouse.h  LinuxPrereqs.h
lib/OIS/include/mac/: CocoaHelpers.h  CocoaInputManager.h  CocoaJoyStick.h  CocoaKeyboard.h  CocoaMouse.h  MacHelpers.h  MacJoyStick.h
lib/OIS/include/win32/: Win32ForceFeedback.h
lib/OIS/lib/: OIS.lib  OIS_d.lib
lib/Ogre/include/: OgreAssimpExports.h  OgreBitesPrerequisites.h  OgreBspPrerequisites.h  OgreBuildSettings.h  OgreBulletExports.h  OgreComponents.h  OgreConfigPaths.h  OgreDotScenePluginExports.h  OgreExports.h  OgreGL3PlusExports.h  OgreGLES2Exports.h  OgreGLSupportPrerequisites.h  OgreOctreePrerequisites.h  OgreOctreeZonePrerequisites.h  OgreOverlayPrerequisites.h  OgrePCZPrerequisites.h  OgreParticleFXPrerequisites.h  OgrePropertyPrerequisites.h  OgreRTShaderExports.h  OgreSTBICodecExports.h  OgreVolumePrerequisites.h
lib/Ogre/lib/Debug/: Codec_Assimp_d.exp  Codec_Assimp_d.lib  Codec_STBI_d.exp  Codec_STBI_d.lib  DefaultSamples_d.exp  DefaultSamples_d.lib  OgreBites_d.exp  OgreBites_d.lib  OgreBullet_d.exp  OgreBullet_d.lib  OgreMain_d.exp  OgreMain_d.lib  OgreMeshLodGenerator_d.exp  OgreMeshLodGenerator_d.lib  OgreOverlay_d.exp  OgreOverlay_d.lib  OgrePaging_d.exp  OgrePaging_d.lib  OgreProperty_d.exp  OgreProperty_d.lib  OgreRTShaderSystem_d.exp  OgreRTShaderSystem_d.lib  OgreTerrain_d.exp  OgreTerrain_d.lib  OgreVolume_d.exp  OgreVolume_d.lib  Plugin_BSPSceneManager_d.exp  Plugin_BSPSceneManager_d.lib  Plugin_DotScene_d.exp  Plugin_DotScene_d.lib  Plugin_OctreeSceneManager_d.exp  Plugin_OctreeSceneManager_d.lib  Plugin_OctreeZone_d.exp  Plugin_OctreeZone_d.lib  Plugin_PCZSceneManager_d.exp  Plugin_PCZSceneManager_d.lib  Plugin_ParticleFX_d.exp  Plugin_ParticleFX_d.lib  RenderSystem_Direct3D11_d.exp  RenderSystem_Direct3D11_d.lib  (+8 more)
lib/Ogre/lib/Release/: Codec_Assimp.exp  Codec_Assimp.lib  Codec_STBI.exp  Codec_STBI.lib  DefaultSamples.exp  OgreMain.exp  (+43 more)
src/: GameObject.cpp  GameObject.h  Main.cpp  Map.cpp  Map.hpp  Object.cpp  Object.hpp  PCH.hpp  Root.cpp  Root.h  Root.hpp  StdAfx.h
src/App/: Map.cpp  Map.h  Object.cpp  Object.h  Root.cpp  Root.h
src/Collision/: AABB.h  AABB.hpp  Grid.cpp  Grid.h  Grid.hpp  Math.h  Math.hpp  NoTree.cpp  NoTree.h  NoTree.hpp  OBB.h  OBB.hpp  Octree.cpp  Octree.h  Octree.hpp  Plane.cpp  Plane.h  Plane.hpp  Shape.h  Shape.hpp  Solver.cpp  Solver.h  Solver.hpp  Sphere.h  Sphere.hpp  Tree.cpp  Tree.h  Tree.hpp  Vector3.h  Vector3.hpp
src/Game/: Map.cpp  Map.h  Object.cpp  Object.h  Root.cpp  Root.h
src/Gecko/: App.cpp  App.hpp  Camera.cpp  Camera.hpp  GameObject.cpp  GameObject.hpp  Input.cpp  Input.hpp  Light.cpp  Light.hpp  Scene.cpp  Scene.hpp
